examples/bad-resources/ingress-fordbidden-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: naranja
  labels:
    servicio: web-frontend
    version: v1
    equipo: naranja
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
